app/assets/stylesheets/home_page.scss
@import "colors";
@import "fonts";

.home_page {
  background-color: $backgroundColor;
  font-family: $baseFont;
  #sticky-sidebar {
    z-index: 0;
    .user_card {
      .name a {
        font-size: 1.875rem;
        font-weight: $black;
        color: $primaryTextColor;
      }
      .subtitle {
        font-size: 1rem;
        font-weight: $regular;
        color: $lightSubTextColor;
      }
      .stats {
        .value {
          font-size: 1.125rem;
          font-weight: $black;
          color: $primaryTextColor;
        }
        .heading {
          font-size: 1rem;
          font-weight: $regular;
          color: $lightSubTextColor;
        }
      }
      .link_section {
        font-size: 1rem;
        font-weight: $regular;
        color: $linkColor;
      }
    }
    .flights_leaderboard_card {
      .title {
        font-size: 1.125rem;
        font-weight: $black;
        color: $primaryTextColor;
      }
      .name a {
        font-size: 1.125rem;
        font-weight: $regular;
        color: $linkColor;
      }
      .count {
        font-size: 1rem;
        font-weight: $regular;
        color: $lightSubTextColor;
      }
    }
  }
  #main_feed {
    min-height: 100vh;
    .story-input-description {
      background-color: $feedBackground;
    }
    .create-story {
      padding: 1rem;
      background-color: white;
    }
    .story_flight {
      display: none;
    }
    .story_ratings {
      display: none;
    }
    .story_ratings {
      .form-check-label.active {
        color: $softText;
        font-weight: $regular;
        font-size: 1.125rem;
      }
      .form-check-label.inactive {
        color: $disabledText;
        font-weight: $extraLight;
        font-size: 1.125rem;
      }
    }
    .nav-item.nav-link.active {
      font-weight: $extraBold;
    }
    .nav-item.nav-link {
      color: $primaryTextColor;
      font-weight: $semiBold;
    }
    .count {
      color: $lightSubTextColor;
      font-weight: $light;
      margin-left: 0.5rem;
    }
    .feed_card {
      .octicon {
        fill: $lightSubTextColor;
      }
      .updated {
        font-size: 1rem;
        font-weight: $regular;
        color: $lightSubTextColor;
      }
      .name a {
        font-size: 1.125rem;
        font-weight: $black;
        color: $primaryTextColor;
      }
      .flight-count {
        font-size: 1.125rem;
        font-weight: $regular;
      }
      .date {
        font-size: 1rem;
        font-weight: $regular;
        color: $lightSubTextColor;
      }
      .description {
        font-size: 1.5rem;
        font-weight: $regular;
        color: $primaryTextColor;
      }
      .airports {
        .identifier {
          font-size: 1.5rem;
          font-weight: $regular;
          color: $primaryTextColor;
        }
        .region {
          font-size: 1rem;
          font-weight: $regular;
          color: $lightSubTextColor;
        }
      }
      .link_section {
        font-size: 1rem;
        font-weight: $regular;
        color: $linkColor;
      }
      .social_actions {
        white-space: nowrap;
        .count {}
        .actions {
          a {
            font-size: 1.125rem;
            font-weight: $regular;
            color: $darkTextColor;
          }
        }
      }
      .comments {
        .username {
          color: $darkTextColor;
          font-weight: $semiBold;
        }
        .username:hover {
          text-decoration: underline;
        }
        .timestamp {
          font-size: 0.85rem;
          font-weight: $regular;
          color: $lightSubTextColor;
        }
      }
      .rating_name {
        font-size: 1.125rem;
        font-weight: $semiBold;
        color: $darkTextColor;
      }
    }
  }
}

@media (max-width: 767px) {
  .home_page {
    #main_feed {
      min-height: 100vh;
      .feed_card {
        .date {}
        .name {
          font-size: 1.2rem;
        }
        .flight-count {}
        .stats {
          .value {
            font-size: 1.2rem;
          }
          .heading {
            font-size: 0.8rem;
          }
        }
        .link_section {}
      }
    }
  }
}

